--- a/Adm.html
+++ b/Adm.html
@@ -4,9 +4,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Painel Administrativo</title>
-<link rel="stylesheet" href="admin.css">
+<link rel="stylesheet" href="css/adm.css">
 </head>
-
+<header class="nav">
+  <div class="logo">English School BILL ONLINE </div>
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="acerca.html">Acerca </a>
+    <a href="aluno.html">Alunos </a>
+    <a href="Professor.html">Professor </a>
+    <a href="curso.html">Cursos</a>
+    <a href="Pagamento.html">Pagamentos</a>
+    <a href="Contato.html">Contato</a>
+    <a href="acerca.html">Acerca </a>
+    <a href="sobre.html">Sobre Nós</a>
+  </nav>
+</header>
 <body>
 
 <div class="layout">
@@ -61,7 +74,7 @@
   </div>
 </div>
 
-<script src="admin.js"></script>
+<script src="js/admin.js"></script>
 </body>
 </html>
 
