--- a/Contato.html
+++ b/Contato.html
@@ -129,11 +129,11 @@ Enviar Mensagem
 <div class="info-box">
 
 <div class="info-item">
-📞 Telefone: +244 900 000 000
+📞 Telefone: +244 942 285 070
 </div>
 
 <div class="info-item">
-📧 Email: contato@englishschool.com
+📧 Email: nduguinidias@gmail.com
 </div>
 
 <div class="info-item">
