--- a/Pagamento.html
+++ b/Pagamento.html
@@ -4,9 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Pagamento</title>
-<link rel="stylesheet" href="pagamento.css">
+<link rel="stylesheet" href="css/pagamento.css">
 </head>
-
 <body>
 
 <div class="box">
@@ -45,6 +44,6 @@
 
 </div>
 
-<script src="pagamento.js"></script>
+<script src="js/"></script>
 </body>
 </html>
