--- a/Professor.html
+++ b/Professor.html
@@ -4,8 +4,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Painel do Professor</title>
-<link rel="stylesheet" href="professor.css">
+<link rel="stylesheet" href="css/professor.css">
 </head>
+<header class="nav">
+  <div class="logo">English School BILL ONLINE </div>
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="aluno.html">Alunos </a>
+    <a href="curso.html">Cursos</a>
+  </nav>
+</header>
 
 <body>
 
