--- a/acerca.html
+++ b/acerca.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca</title>
-    <link rel="stylesheet" href="Acerca.css">
+    <link rel="stylesheet" href="css/Acerca.css">
 </head>
+
 <header class="nav">
-  <div class="logo">English School BIIL ONLINE </div>
-  <nav>
-    <a href="index.html">Início</a>
-    <a href="sobre.html">Sobre Nós</a>
-  </nav>
+ <div class="logo">TEACHER BILL ONLINE  CLASS</div>
+ <nav>
+  <a href="index.html">Início</a>
+  <a href="sobre.html">Sobre Nós</a>
+ </nav>
 </header>
 <body>
     
