--- a/aluno.html
+++ b/aluno.html
@@ -4,9 +4,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Painel do Aluno</title>
-<link rel="stylesheet" href="aluno.css">
+<link rel="stylesheet" href="css/aluno.css">
 </head>
-
+<header class="nav">
+  <div class="logo">English School BILL ONLINE </div>
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="Professor.html">Professor </a>
+    <a href="acerca.html">Acerca </a>
+    <a href="sobre.html">Sobre Nós</a>
+  </nav>
+</header>
 <body>
 
 <header>
@@ -35,7 +43,7 @@
 <section id="aula" class="secao">
 <h3>Vídeo Aula</h3>
 <video id="videoAula" controls width="100%">
-<source src="videos/aula1.mp4" type="video/mp4">
+<source src="Vídeos/Estrutura_de_Dados_e_Algoritmos_com_Java__Vetores_e_Arrays__Exer_04_método_obtém__get_(0).mp4" type="video/mp4">
 </video>
 <button onclick="marcarConcluida()">Marcar como concluída</button>
 </section>
@@ -64,6 +72,6 @@
 </main>
 </div>
 
-<script src="aluno.js"></script>
+<script src="app.js/aluno.js"></script>
 </body>
 </html>
