--- a/curso.html
+++ b/curso.html
@@ -4,9 +4,23 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Painel de Cursos</title>
-<link rel="stylesheet" href="cursos.css">
+<link rel="stylesheet" href="css/cursos.css">
 </head>
+<header class="nav">
+ <div class="logo">TEACHER BILL ONLINE  CLASS</div>
+ <nav>
+  <a href="index.html">Início</a>
+  <a href="login.html">Login</a>
+  <a href="acerca.html">Acerca</a>
+  <a href="sobre.html">Sobre Nós</a>
+  <a href="curso.html">Cursos</a>
+  <a href="aluno.html">Alunos </a>
+  <a href="Professor.html">Professor </a>
+  <a href="Pagamento.html">Pagamentos</a>
+  <a href="Contato.html">Contato</a>
 
+ </nav>
+</header>
 <body>
 
 <header class="topo">
@@ -52,6 +66,6 @@
   </div>
 </div>
 
-<script src="cursos.js"></script>
+<script src="app.js/cursos.js"></script>
 </body>
 </html>
