--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@ index.html (Página inicial com animação + pesquisa + anúncios)
 <body>
 
 <header class="nav">
- <div class="logo">BILL ONLINE  CLASS</div>
+ <div class="logo">TEACHER BILL ONLINE  CLASS</div>
  <nav>
   <a href="login.html">Login</a>
-  <a href="index.html">Início</a>
   <a href="acerca.html">Acerca</a>
   <a href="sobre.html">Sobre Nós</a>
   <a href="curso.html">Cursos</a>
@@ -35,8 +34,7 @@ index.html (Página inicial com animação + pesquisa + anúncios)
 </header>
 
 <div class="hero">
- <img id="slide" src="imagens/Im1.jpg" class="hero-img">
- <img id="slide" src="imagens/Im4.jpg" class="hero-img">
+ <img id="slide" src="imagens/Im7.jpg" class="hero-img">
  <img id="slide" src="imagens/Im5.jpg" class="hero-img">
  <img id="slide" src="imagens/im6.jpg" class="hero-img">
 
@@ -69,13 +67,13 @@ ANÚNCIOS ANIMADOS
 
 <section class="anuncios">
 
-<h2 class="titulo">Anúncios</h2>
+<h2 class="titulo">Anúncios / Highlights</h2>
  <div class="anuncios-sobre">
        <p id="anuncioText"></p>
     <p id="anuncioTextPt" style="font-style:italic;color:#00ff4c;"></p>
   </div>
 <div class="banner">
-<img id="imgAds" src="imagens/Bill.jpg">
+<img id="imgAds" src="imagens/Uige.jpg">
 </div>
 
 </section>
@@ -85,9 +83,10 @@ ANÚNCIOS ANIMADOs
 ========================= -->
 
 <section class="anuncios-sobre">
-  <h2 class="titulo">Anúncios / Highlights</h2>
+  
   <div class="anuncio-box">
-    <p id="anuncioText"></p>
+    <p id="anuncioText">Eng Ndunguini Dias</p>
+     <p id="anuncioText">Dadivanio Dias</p>
     <p id="anuncioTextPt" style="font-style:italic;color:#052aff;"></p>
   </div>
 </section>
