--- a/sobre.html
+++ b/sobre.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sobre </title>
-    <link rel="stylesheet" href="sobre.css">
+    <link rel="stylesheet" href="css/sobre.css">
 </head>
 <header class="nav">
-  <div class="logo">English School BILL ONLINE </div>
-  <nav>
-    <a href="index.html">Início</a>
-    <a href="acerca.html">Acerca </a>
-  </nav>
+ <div class="logo">TEACHER BILL ONLINE  CLASS</div>
+ <nav>
+  <a href="index.html">Início</a>
+  <a href="acerca.html">Acerca</a>
+
+ </nav>
 </header>
 <body>
     <!-- =========================
@@ -43,7 +44,7 @@ e comunicação internacional.
 </div>
 
 <div class="img-box">
-<img id="imgInst" src="imagens/IMG-20260216-WA0001.jpg">
+<img id="imgInst" src="imagens/Im1.jpg">
 </div>
 
 </div>
@@ -60,20 +61,20 @@ EQUIPE
 <div class="team-grid">
 
 <div class="team-card">
-<img src="media/team1.jpg">
-<h4>Prof. Ana Silva</h4>
-<p>Coordenadora</p>
+<img src="imagens/Foto-Ndunguini Dias.jpg">
+<h4>Ndunnguini Dias</h4>
+<p>Coordenador</p>
 </div>
 
 <div class="team-card">
-<img src="media/team2.jpg">
-<h4>John Miller</h4>
+<img src="imagens/Bill.jpg">
+<h4>Teacher Bill </h4>
 <p>Professor Nativo</p>
 </div>
 
 <div class="team-card">
-<img src="media/team3.jpg">
-<h4>Carlos Mendes</h4>
+<img src="imagens/Ndombele.jpg">
+<h4> Domingos </h4>
 <p>Suporte Acadêmico</p>
 </div>
 
@@ -89,16 +90,16 @@ PARCEIROS
 <h2 class="titulo">Parceiros</h2>
 
 <div class="logos">
-<img src="media/p1.png">
-<img src="media/p2.png">
-<img src="media/p3.png">
-<img src="media/p4.png">
+<img src="imagens/Foto-Ndunguini Dias.jpg">
+<img src="imagens/Bill.jpg">
+<img src="imagens/Ndombele.jpg">
+<img src="imagens/Mae.jpg">
 </div>
 
 </section>
 
 
-<script src="sobre.js"></script>
+<script src="js/sobre.js"></script>
 <footer class="rodape">
   © Plataforma de Ensino Online Teacher Ditunga  2026
 </footer>
